fix tx id out of box

--- a/src/styles/_exchange.scss
+++ b/src/styles/_exchange.scss
@@ -140,4 +140,9 @@
   .breakable-address {
     word-break: break-all;
   }
+
+  .tracking-box {
+    flex: none;
+    width: 700px;
+  }
 }
